--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 
 
     <div class="wrapper_titleDescription">
-      <h1 class="main_title oneT">  Lyric Battle: Guess the <span id="blur_text"><del>missing</del></span> Lyrics! </h1>
+      <h1 class="main_title oneT">  🎵 Lyric Battle: Guess the <span id="blur_text"><del>missing</del></span> Lyrics! 🎵 </h1>
       <p class="game_description">Listen to your favorite Spotify tracks, but when the lyrics cut out, can you guess the next words? Who will be the ultimate music expert?! </p>
     </div>
 
@@ -130,12 +130,17 @@
         </div>
 
       </div> <!-- End of wrapper video battle -->
+
+      <div id="containerSplitButtonNResult">
+        <div class="split-button">
+          <button class="half left">A</button>
+          <button class="half right">B</button>
+        </div>
+      </div>
+      
     </div> <!-- End of container video battle -->
 
-    <div class="split-button">
-      <button class="half left">A</button>
-      <button class="half right">B</button>
-    </div>
+
 
     <hr class="bot_hr_wrapper">
 
