90% of the index pages completed

--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -17,8 +17,9 @@
     display: flex;
     margin-top: 1rem;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 5rem;
+    margin-left: clamp(4rem, 7rem, 8rem);
   }
   
   
