--- a/static/css/index.css
+++ b/static/css/index.css
@@ -477,6 +477,10 @@ transform: translate(100%, -50%) scaleX(-1);
   color: var(--bg-color);
   width: auto;
   background-color: #19af4e;
+  -webkit-box-shadow: inset 0px 0px 20px 8px rgba(0,0,0,0.74), inset 8px 5px 17px 5px rgba(255,255,255,0.2);
+  -moz-box-shadow: inset 0px 0px 20px 8px rgba(0,0,0,0.74), inset 8px 5px 17px 5px rgba(255,255,255,0.2);
+  box-shadow: inset 0px 0px 20px 8px rgba(0,0,0,0.74), inset 8px 5px 17px 5px rgba(255,255,255,0.2);
+
   border-radius: 1rem;
   padding: 0.8rem;
   font-size: 2.7rem;
@@ -692,7 +696,6 @@ transform: translate(100%, -50%) scaleX(-1);
   justify-content: center;
   height: 20rem;
   flex-direction: column;
-  margin-bottom: 5rem;
 }
 
 
@@ -1136,35 +1139,9 @@ transform: translate(100%, -50%) scaleX(-1);
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .btn_callToAction { 
   position: absolute;
-  left: 50%;
+  left: 100%;
   top: 100%;
   transform: translateX(-50%);
   display: none;
