--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
           <div class="icon">2</div>
           <div class="description">
             <h4>Select Playlist</h4>
-            <p>Choose your favorite song.</p>
+            <p>Choose your favorite Mod.</p>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
       </div>
       <div class="infoItem">
         <div class="descriptionNumber DN2">2</div>
-        <p id="pPushed">Pick song</p>
+        <p id="pPushed">Pick Mod</p>
       </div>
       <div class="infoItem">
         <div class="descriptionNumber">3</div>
