--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="icon">2</div>
           <div class="description">
-            <h4>Select Playlist</h4>
-            <p>Choose your favorite Mod.</p>
+            <h4>Select Battle</h4>
+            <p>Choose your favorite Mod</p>
           </div>
         </div>
       </div>
