--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,6 +17,7 @@
   --text-secondary: var(--niceBlue);
   --hr-color: rgba(255, 255, 255, 0.5);
   --box-shadow1: 0px 25px 20px -20px rgba(40, 197, 66, 0.45), 0 0 10px rgba(255, 255, 255, 0.2);
+  --box-shadowItem: inset 0px 0px 20px 8px rgba(0,0,0,0.74), inset 8px 5px 13px 2px rgba(255,255,255,0.2);
   --carrousel-boxShadow: none;
 
   /* Theme toggle button */
@@ -45,6 +46,9 @@
   --box-shadow: 13px 13px 10px -4px rgba(0, 0, 0, 0.4),
                 5px 3px 6px -2px rgba(0, 0, 0, 0.5),
                 inset 4px 15px 13px -14px rgba(255, 255, 255, 1);
+  --box-shadowItem: 13px 13px 10px -4px rgba(0, 0, 0, 0.4),
+                    5px 3px 6px -2px rgba(0, 0, 0, 0.5),
+                    inset 4px 15px 13px -14px rgba(255, 255, 255, 1);
 
   --carrousel-boxShadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   
