--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
 
 
     <div class="wrapper_titleDescription">
-      <h1 class="main_title oneT">  🎵 Music Battle: The Ultimate Showdown 🎵 </h1>
-      <p class="game_description"> Multiple battle modes await you. Choose your challenge and see if you have what it takes to be the ultimate music expert?! 🎵⭐ </p>
+      <h1 class="main_title oneT">Music Battle: The Ultimate Showdown</h1>
+      <p class="game_description">Multiple battle modes await you. Choose your challenge and see if you have what it takes to be the ultimate music expert?! 🎸⭐</p>
     </div>
 
 
@@ -59,7 +59,7 @@
           <div class="icon">2</div>
           <div class="description">
             <h4>Select Battle</h4>
-            <p>Choose your favorite Mod</p>
+            <p>Choose your favorite Mod.</p>
           </div>
         </div>
       </div>
