--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,6 +18,7 @@
   --hr-color: rgba(255, 255, 255, 0.5);
   --box-shadow1: 0px 25px 20px -20px rgba(40, 197, 66, 0.45), 0 0 10px rgba(255, 255, 255, 0.2);
   --box-shadowItem: inset 0px 0px 20px 8px rgba(0,0,0,0.74), inset 8px 5px 13px 2px rgba(255,255,255,0.2);
+  --box-shadowGlass: 0 2px 6px rgba(0, 0, 0, 0.5), 0 1px 0px rgba(0, 0, 0, 0.7), inset 0 2px 3px rgba(255, 255, 255, 1), inset 0 -1px 4px 0px rgba(255, 255, 255, 1);
   --carrousel-boxShadow: none;
 
   /* Theme toggle button */
@@ -49,6 +50,13 @@
   --box-shadowItem: 13px 13px 10px -4px rgba(0, 0, 0, 0.4),
                     5px 3px 6px -2px rgba(0, 0, 0, 0.5),
                     inset 4px 15px 13px -14px rgba(255, 255, 255, 1);
+
+    --box-shadowGlass: 13px 13px 10px -4px rgba(0, 0, 0, 0.4),
+    5px 3px 6px -2px rgba(0, 0, 0, 0.5),
+    inset 4px 15px 13px -14px rgba(255, 255, 255, 1),
+    0px 25px 25px -35px rgba(40, 197, 66, 0.575);
+
+
 
   --carrousel-boxShadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   
