--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -1,278 +1,237 @@
 
-  /* body {
-      color: #5d9f80d3;  *var(--text-secondary);?*
-  } */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
 
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-  }
+/* Profile section layout */
+.user_profile_section {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 5rem;
+}
+
+/* Image section */
+.spotify_pp_wrapper {
+  width: 13rem; 
+  height: 13rem;
+  aspect-ratio: 1 / 1; 
+  border-radius: 50%; 
+  outline: 0.233rem solid #1DB954; /* Need too find better outline*/
+  overflow: hidden;
+  pointer-events: none;
+
+}
+
+.spotify_pp_wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  border-radius: inherit; 
   
-  .user_profile_wrapper {
-    width: 100%;
-    height: 25rem;
-    display: flex;
-    margin-top: 1rem;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 5rem;
-    margin-left: clamp(4rem, 7rem, 8rem);
-  }
-  
-  
-  /* Profile section layout */
-  .user_profile_section {
-    display: flex;
-  }
-  
-  /* Image section */
+}
+
+.greetings_user {
+  transform: translateY(30%);
+  font-family: "Gill Sans", sans-serif;
+  text-align: left;
+  padding-left: 2rem;
+  color: var(--text-color); 
+}
+
+.greetings_user h1 {
+  font-size: 4rem;
+  color: #1DB954; /* Spotify green color to store */
+}
+
+.greetings_user h2 {
+  font-size: clamp(2rem, 2rem, 3rem);
+}
+
+@media screen and (max-width: 930px) {
+    
   .spotify_pp_wrapper {
-    width: 15rem; 
-    height: 15rem;
-    aspect-ratio: 1 / 1; 
-    border-radius: 50%; 
-    outline: 0.233rem solid rgba(0, 155, 155, 0.7); /* Need too find better outline*/
-    overflow: hidden;
-  }
-  
-  .spotify_pp_wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-    border-radius: inherit; 
-  }
-  
-  .greetings_user {
-    transform: translateY(30%);
-    font-family: "Gill Sans", sans-serif;
-    text-align: left;
-    padding-left: 2rem;
-    color: var(--text-color); 
+    width: 10rem; 
+    height: 10rem;
+    margin-left: 0;
   }
   
   .greetings_user h1 {
-    font-size: 4rem;
-    color: #1DB954; /* Spotify green color to store */
+    font-size: 3.4rem;
   }
   
   .greetings_user h2 {
-    font-size: clamp(2rem, 2rem, 3rem);
-  }
-  
-  
-  
-  /*Row grid 2 section */
-  .search-form {
-    position: relative;
-    height: 3.3rem;
-    width: 22rem;
-    transform: translateY(45%);
-  }
-  
-  
-  .ryuji_button {
-    width: 100%;
-    height: 100%;
-    border-radius: 0.5em;
-    padding: 0 4rem 0 3rem; 
-    background-color: var(--glass-color);
-    font-size: 1rem;
-    border: 0.13rem solid rgba(0, 155, 155, 0.7); 
-    outline-color: transparent;
-    color: var(--text-color);
-  }
-  
-  .ryuji_button:focus {
-    outline: 0.155rem solid rgba(0, 155, 155, 0.7);
-    border: none;
-  }
-  
-  #search-icon {
-    position: absolute;
-    top: 50%;
-    left: 1rem; 
-    transform: translateY(-50%); /* Flip on X axis, center Y axis */
-    transform-origin: center;
-    width: 1.5rem;
-    height: 1.5rem;
-    color: var(--glass-textColor);
-    pointer-events: none;
-    transition: color 0.2s, filter 0.2s; /* Smooth transition for glow effect */
-  }
-  
-  #clear_button {
-    position: absolute;
-    top: 50%;
-    right: 1rem; 
-    transform: translateY(-50%); 
-    transform-origin: center;
-    width: 2rem;
-    height: 2rem;
-    opacity: 0.6;
-    color: var(--glass-textColor);
-    cursor: pointer; /
-  }
-  
-  .ryuji_button:focus + #search-icon {
-    color: var(--search-iconColor); 
-    filter: var(--search-iconFilter);
-  }
-  
-  
-  
-  @media screen and (max-width: 930px) {
-    
-    .user_profile_wrapper {
-      display: grid;
-      align-items: center;
-      justify-items: center;
-      grid-template-columns: 1fr;
-      gap: 1rem;    
-    }
-    
-    .user_profile_section {
-      width: 100%;
-      justify-content: center;
-    }
-    
-    .spotify_pp_wrapper {
-      width: 10rem; 
-      height: 10rem;
-    }
-  
-    .greetings_user h1 {
-      font-size: 3.4rem;
-    }
-  
-    .greetings_user h2 {
-      font-size: 2rem;
-    }
-    
-    .search-form {
-      transform: translateY(0%);
-    }  
-  }
-
-
-
-  /* Set the style of the music box grid */
-  .centered_wrapper_musicBox {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  /* music box section Section */
-  .wrapper_containerPas {
-    height: 35rem;
-    width: 100%;
-    margin-top: 1.2rem;
-  }
-  
-  /* Grid Layout */
-  .grid_pas {
-    margin-inline: auto;
-    width: 60%;
-    height: 100%;
-    display: grid;
-    column-gap: 3rem;
-    grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr)); 
-    grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr)); 
-  }
-  
-
-  .music_box {
-    position: relative;
-    width: 100%;
-    min-width: 10rem;
-    height: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 2rem;
-    align-self: center;
-    border: 0.17rem solid hsla(210, 30%, 50%, 0.263); 
-    box-shadow: var(--box-shadow);
-    cursor: pointer;
-    overflow: hidden;
-    transition: transform 0.3s;
-  }
-
-  .music_box:hover {
-    transform: translateY(-0.5rem);
-  }
-  
-  .music_box img {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 1;
-    border-radius: inherit;
-  }
-  
-  /* Text inside carts */
-  .music_box .text {
-    text-align: center;
-    position: absolute;
-    color: white;
     font-size: 2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    pointer-events: none;
   }
-  
-  /* Grid Positioning */
-  .card1 { grid-column: 1 / 2; grid-row: 1 / 4; }
-  .card2 { grid-column: 2 / 4; grid-row: 1 / 3; }
-  .card3 { grid-column: 1 / 2; grid-row: 4 / 6; }
-  .card4 { grid-column: 2 / 4; grid-row: 3 / 6; }
-
-  /* Responsive Design */
-  @media (max-width: 850px) {
-    .grid_pas {
-      width: 100%;
-      /* row-gap: 2rem; */
-    }
-    
-    /* Box Styling */
-    /* .music_box {
-      box-shadow: 0 0 0.9rem hsl(209, 98%, 30%);
-    } */
-  }
-  
-  @media (max-width: 600px) {
-    .grid_pas {
-        padding: 1rem;
-        column-gap: 1rem;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
-        justify-content: center;
-        align-items: center;
-    }
-
-    .music_box {
-      border: 0.17rem solid hsla(210, 30%, 50%, 0.263); 
-      /* box-shadow: 0 0.3rem 1rem rgba(0, 155, 155, 0.3), inset 0 0 0.5rem rgba(0, 155, 155, 0.3); */
-    }
-
-    .card1 { grid-column: 1 / 2; grid-row: 1 / 2; }
-    .card2 { grid-column: 2 / 3; grid-row: 1 / 2; }
-    .card3 { grid-column: 1 / 2; grid-row: 2 / 3; }
-    .card4 { grid-column: 2 / 3; grid-row: 2 / 3; }
 }
 
-  /* Set the style playlist */
-  .coverflow_playlist {
-    display: none;
-    margin-top: 10rem;
-    max-width: 100%;
-    max-height: 25rem;
-    gap: 1rem;
+#userProfilData {
+  position: absolute;
+  top: 20%;
+  left: 0%;
+  width: auto;
+  height: auto;
+  width: 25rem;
+  border-right: 1px solid var(--border1);
+  border-bottom: 1px solid var(--border1);
+  border-top: 1px solid var(--border1);
+  padding-block: 1rem;
+  padding-left: 2rem;
+  padding-right: 1rem;
+  line-height: 2.2rem;
+  text-transform: capitalize;
+  text-transform: uppercase;
+  background-color: var(--bg-color);
+}
+
+#profilDataAlign {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#userProfilData p {
+  display: flex;
+  justify-content: space-between; /* Push span to the far right */
+  align-items: center; /* Optional: align text vertically centered */
+}
+
+#userProfilData span {
+  margin-left: auto; /* Ensure span stays aligned to the right */
+}
+
+
+
+#selectMod {
+  font-size: 4rem;
+  text-align: center;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  color: var(--text-color);
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 4rem;
+
+}
+
+
+
+/* Set the style of the music box grid */
+.centered_wrapper_musicBox {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* music box section Section */
+.wrapper_containerPas {
+  height: 30rem;
+  width: 100%;
+  
+}
+
+/* Grid Layout */
+.grid_pas {
+  margin-inline: auto;
+  width: 65%;
+  height: 80%;
+  display: grid;
+  column-gap: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr)); 
+  grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr)); 
+  
+}
+
+.music_box {
+  position: relative;
+  width: 100%;
+  min-width: 10rem;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: .7rem;
+  align-self: center;
+  border: none;
+  outline: .3rem solid var(--spotifyColor);
+  box-shadow: var(--box-shadow);
+  cursor: pointer;
+  
+  transition: transform 0.3s;
+}
+
+.music_box:hover {
+  transform: translateY(-0.5rem);
+}
+
+.music_box img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 1;
+  border-radius: inherit;
+}
+
+/* Text inside carts */
+.music_box .text {
+  text-align: center;
+  position: absolute;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+}
+
+/* Grid Positioning */
+.card1 { grid-column: 1 / 2; grid-row: 1 / 2; }
+.card2 { grid-column: 2 / 3; grid-row: 1 / 2; }
+.card3 { grid-column: 1 / 2; grid-row: 2 / 3; }
+.card4 { grid-column: 2 / 3; grid-row: 2 / 3; }
+
+/* Responsive Design */
+@media (max-width: 850px) {
+  .grid_pas {
+    width: 100%;
+    /* row-gap: 2rem; */
+  }
+  
+  /* Box Styling */
+  /* .music_box {
+  box-shadow: 0 0 0.9rem hsl(209, 98%, 30%);
+  } */
+}
+
+@media (max-width: 600px) {
+  .grid_pas {
+    padding: 1rem;
+    column-gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
     justify-content: center;
+    align-items: center;
+  }
+  
+  .music_box {
+    border: 0.17rem solid hsla(210, 30%, 50%, 0.263); 
+    /* box-shadow: 0 0.3rem 1rem rgba(0, 155, 155, 0.3), inset 0 0 0.5rem rgba(0, 155, 155, 0.3); */
+  }
+  
+}
+
+/* Set the style playlist */
+.coverflow_playlist {
+  display: none;
+  margin-top: 10rem;
+  max-width: 100%;
+  max-height: 25rem;
+  gap: 1rem;
+  justify-content: center;
 } /* ? */ 
