passing user's spotify meta-data such such as total songs ext...

--- a/templates/selection.html
+++ b/templates/selection.html
@@ -28,7 +28,7 @@
                                 <p>Liked Title: <span id="totalLikedSongs">{{ total_likedSongs }}</span></p>
                                 <p>Total Songs: <span class="TotalSongs">{{ TOTAL_SONGS }}</span></p>
                                 <br>
-                                <p>Rank: <span id="rank">S++</span></p>
+                                <p>Rank: <span id="rank">F</span></p>
                         </div>
                 </div>
                 
