--- a/static/css/selection.css
+++ b/static/css/selection.css
@@ -208,14 +208,20 @@
   border-radius: .7rem;
   align-self: center;
   border: none;
-  outline: .2rem solid var(--spotifyColor);
   box-shadow: var(--box-shadow);
-  cursor: pointer;
-  
   transition: transform 0.3s;
 }
 
-.music_box:hover {
+.music_box:not(.card4) {
+  outline: .2rem solid var(--spotifyColor);
+  cursor: pointer;
+}
+
+.music_box.card4 {
+  outline: .25rem solid #333;
+}
+
+.music_box:not(.card4):hover {
   transform: translateY(-0.5rem);
 }
 
@@ -248,6 +254,8 @@
 .card2 { grid-column: 2 / 3; grid-row: 1 / 2; }
 .card3 { grid-column: 1 / 2; grid-row: 2 / 3; }
 .card4 { grid-column: 2 / 3; grid-row: 2 / 3; }
+
+
 
 /* Responsive Design */
 @media (max-width: 850px) {
